spade-tests/src/snapshots/spade_tests__typeinference__field_access_on_declared_non_struct_is_error.snap
---
source: spade-tests/src/typeinference.rs
---
fn a() -> int<32> {
    decl x;
    let a = x.a;
    let x = 0;
    a
}


error: Field access on a primitive type
  ┌─ testinput:3:13
  │
3 │     let a = x.a;
  │             ^ expected a struct, got int
  │
  = note: Field access is only allowed on structs


